--- a/stack.yaml
+++ b/stack.yaml
@@ -3,5 +3,7 @@ flags: {}
 extra-package-dbs: []
 packages:
 - '.'
-extra-deps: []
-resolver: nightly-2018-01-15
+extra-deps:
+- compact-0.1.0.1
+allow-newer: true
+resolver: nightly-2018-04-28
